hooking up the view for the index page of photo galleries.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -42,31 +42,8 @@
 		                    </li>
 		                    <li><a href="javascript:void(0)">Media</a>
 		                      <ul class="dropdown">
-		                            <li><a href="sermons.html">Sermons</a>
-		                                <ul class="dropdown">
-		                                    <li><a href="sermons-series.html">Sermons Series</a></li>
-		                                    <li><a href="sermons-list.html">Sermons List</a></li>
-		                                    <li><a href="single-sermon.html">Single Sermon</a></li>
-		                                </ul>
-		                            </li>
-		                            <li><a href="javascript:void(0)">Gallery</a>
-		                                <ul class="dropdown">
-		                                    <li><a href="gallery-2cols-filter.html">With Filter</a>
-		                                        <ul class="dropdown">
-		                                            <li><a href="gallery-2cols-filter.html">2 Cols</a></li>
-		                                            <li><a href="gallery-3cols-filter.html">3 Cols</a></li>
-		                                            <li><a href="gallery-4cols-filter.html">4 Cols</a></li>
-		                                        </ul>
-		                                    </li>
-		                                    <li><a href="gallery-2cols-pagination.html">With Pagination</a>
-		                                        <ul class="dropdown">
-		                                            <li><a href="gallery-2cols-pagination.html">2 Cols</a></li>
-		                                            <li><a href="gallery-3cols-pagination.html">3 Cols</a></li>
-		                                            <li><a href="gallery-4cols-pagination.html">4 Cols</a></li>
-		                                        </ul>
-		                                    </li>
-		                                    <li><a href="gallery-galleria.html">Galleria Gallery</a></li>
-		                                </ul>
+		                            <li>
+		                            	<%= link_to "Photo Gallery", photo_galleries_path %>
 		                            </li>
 		                        </ul>
 		                    </li>
