--- a/app/views/photo_galleries/index.html.erb
+++ b/app/views/photo_galleries/index.html.erb
@@ -1,25 +1,68 @@
-<p id="notice"><%= notice %></p>
+<!-- Start Page Header -->
+<div class="page-header parallax clearfix" style="background-color: #3bafda;">
+    <div class="title-subtitle-holder">
+      <div class="title-subtitle-holder-inner">
+      <h2>Photo Galleries</h2>
+      </div>
+    </div>
+</div>
+<!-- End Page Header -->
+<!-- Breadcrumbs -->
+<div class="lgray-bg breadcrumb-cont">
+  <div class="container">
+        <ol class="breadcrumb">
+          <li><%= link_to "Home", home_path %></li>
+          <li class="active">Photo Galleries</li>
+        </ol>
+    </div>
+</div>
 
-<h1>Photo Galleries</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @photo_galleries.each do |photo_gallery| %>
-      <tr>
-        <td><%= link_to 'Show', photo_gallery %></td>
-        <td><%= link_to 'Edit', edit_photo_gallery_path(photo_gallery) %></td>
-        <td><%= link_to 'Destroy', photo_gallery, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Photo Gallery', new_photo_gallery_path %>
+<!-- Start Body Content -->
+<div class="main" role="main">
+  <div id="content" class="content full">
+      <div class="container">
+            <div class="row">
+                <ul class="sort-destination isotope-grid" data-sort-id="gallery">
+                  <li class="col-md-4 col-sm-4 grid-item format-image">
+                      <div class="grid-item-inner"> <a href="http://placehold.it/600x600&amp;text=IMAGE+PLACEHOLDER" data-rel="prettyPhoto" class="media-box"> <img src="http://placehold.it/600x600&amp;text=IMAGE+PLACEHOLDER" alt=""> </a> </div>
+                  </li>
+                  <li class="col-md-4 col-sm-4 grid-item format-image">
+                      <div class="grid-item-inner"> <a href="http://placehold.it/600x600&amp;text=IMAGE+PLACEHOLDER" data-rel="prettyPhoto" class="media-box"> <img src="http://placehold.it/600x600&amp;text=IMAGE+PLACEHOLDER" alt=""> </a> </div>
+                  </li>
+                  <li class="col-md-4 col-sm-4 grid-item format-video">
+                      <div class="grid-item-inner"> <a href="https://vimeo.com/19564018" data-rel="prettyPhoto" class="media-box"> <img src="http://placehold.it/800x500&amp;text=IMAGE+PLACEHOLDER" alt=""> </a> </div>
+                    </li>
+                  <li class="col-md-4 col-sm-4 grid-item format-gallery">
+                      <div class="grid-item-inner">
+                        <div class="media-box">
+                            <div class="flexslider galleryflex" data-autoplay="yes" data-pagination="yes" data-arrows="yes" data-style="slide" data-pause="yes">
+                              <ul class="slides">
+                                  <li class="item"><a href="http://placehold.it/600x600&amp;text=IMAGE+PLACEHOLDER" data-rel="prettyPhoto[postname]"><img src="http://placehold.it/600x600&amp;text=IMAGE+PLACEHOLDER" alt=""></a></li>
+                                  <li class="item"><a href="http://placehold.it/600x600&amp;text=IMAGE+PLACEHOLDER" data-rel="prettyPhoto[postname]"><img src="http://placehold.it/600x600&amp;text=IMAGE+PLACEHOLDER" alt=""></a></li>
+                              </ul>
+                            </div>
+                        </div>
+                      </div>
+                  </li>
+                  <li class="col-md-4 col-sm-4 grid-item format-link">
+                    <div class="grid-item-inner"> <a href="http://www.google.com" target="_blank" class="media-box"> <img src="http://placehold.it/600x600&amp;text=IMAGE+PLACEHOLDER" alt=""> </a> </div>
+                  </li>
+                  <li class="col-md-4 col-sm-4 grid-item format-image">
+                      <div class="grid-item-inner"> <a href="http://placehold.it/800x500&amp;text=IMAGE+PLACEHOLDER" data-rel="prettyPhoto" class="media-box"> <img src="http://placehold.it/800x500&amp;text=IMAGE+PLACEHOLDER" alt=""> </a> </div>
+                  </li>
+                </ul>
+          </div>
+            <!-- Pagination -->
+            <ul class="pagination">
+                <li><a href="#"><i class="fa fa-chevron-left"></i></a></li>
+                <li><a href="#">1</a></li>
+                <li class="active"><a href="#">2</a></li>
+                <li><a href="#">3</a></li>
+                <li><a href="#">4</a></li>
+                <li><a href="#">5</a></li>
+                <li><a href="#"><i class="fa fa-chevron-right"></i></a></li>
+            </ul>
+      </div>
+    </div>
+</div>
+<!-- End Body Content -->
